--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "moment": "^2.22.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -39,6 +40,7 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-markdown": "^3.3.2",
     "react-router-dom": "^4.2.2",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
