--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jsonp": "^0.2.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.0",
@@ -50,6 +51,7 @@
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
+    "validator": "^10.3.0",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
