--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "es6-promise": "^4.2.4",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -30,7 +31,6 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "jsonp": "^0.2.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.0",
@@ -47,6 +47,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "reqwest": "^2.0.5",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
