--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-markdown": "^3.3.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-router-scroll-4": "^1.0.0-beta.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "reqwest": "^2.0.5",
