--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,5 +2,6 @@ Options -MultiViews
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+Redirect 301 /content https://blog.theportlandpour.com/content
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.html [QSA,L]
