--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jest": "20.0.4",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "node-sass-chokidar": "^1.3.0",
+    "node-sass-chokidar": "^1.3.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -43,6 +43,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-ga": "^2.5.3",
+    "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
