--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-element-to-string": "^1.0.2",
     "react-ga": "^2.5.3",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.4",
