--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,7 @@
 Options -Indexes -MultiViews
 
+AddDefaultCharset UTF-8
+
 <ifModule mod_headers.c>
     Header set Connection keep-alive
     <FilesMatch ".(js|css|xml|gz|html)$">
