--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "react-dom": "^16.4.1",
     "react-element-to-string": "^1.0.2",
     "react-ga": "^2.5.3",
-    "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.4",
+    "react-meta-tags": "^0.5.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-scroll-4": "^1.0.0-beta.1",
