--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
     "autoprefixer": "7.1.6",
-    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^3.1.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -27,17 +25,13 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
-    "express": "^4.16.3",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
-    "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
-    "ignore-styles": "^5.0.1",
     "jest": "20.0.4",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "morgan": "^1.9.1",
     "node-sass-chokidar": "^1.3.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -67,16 +61,13 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "xhr2": "^0.1.4"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start": "npm run build-css && node scripts/start.js",
     "build": "npm run build-css && node scripts/build.js",
-    "serve": "SET NODE_ENV=development&&node server/index.js",
-    "deploy": "NODE_ENV=production node server/index.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
