--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^3.1.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "connected-react-router": "^4.4.1",
+    "cookie-parser": "^1.4.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -28,14 +30,20 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "forcedomain": "^1.0.0",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
+    "ignore-styles": "^5.0.1",
     "jest": "20.0.4",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
+    "md5-file": "^4.0.0",
     "moment": "^2.22.2",
+    "morgan": "^1.9.1",
     "node-sass-chokidar": "^1.3.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -46,8 +54,10 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-element-to-string": "^1.0.2",
+    "react-frontload": "^1.0.2",
     "react-ga": "^2.5.3",
     "react-helmet": "^5.2.0",
+    "react-loadable": "^5.5.0",
     "react-markdown": "^3.3.4",
     "react-meta-tags": "^0.5.1",
     "react-redux": "^5.0.7",
@@ -65,13 +75,16 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "xhr2": "^0.1.4"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start": "npm run build-css && node scripts/start.js",
     "build": "npm run build-css && node scripts/build.js",
+    "serve": "SET NODE_ENV=production&&node server/index.js",
+    "deploy": "NODE_ENV=production node server/index.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
