--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.3.1",
-    "@material-ui/icons": "^1.1.0",
+    "@material-ui/core": "^3.0.3",
+    "@material-ui/icons": "^3.0.1",
     "ajv": "^6.5.3",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -44,6 +44,7 @@
     "md5-file": "^4.0.0",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
+    "node-fetch": "^2.2.0",
     "node-sass-chokidar": "^1.3.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
