--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-brands-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
     "ajv": "^6.5.3",
@@ -52,7 +55,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.1",
-    "react-dev-utils": "^5.0.1",
+    "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.1",
     "react-element-to-string": "^1.0.2",
     "react-frontload": "^1.0.2",
