--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/system": "^3.0.0-alpha.1",
     "ajv": "^6.7.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
