--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "connected-react-router": "^4.5.0",
     "cookie-parser": "^1.4.3",
     "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
+    "dotenv": "^4.0.0",
     "dotenv-expand": "4.2.0",
     "es6-promise": "^4.2.5",
     "eslint": "4.10.0",
@@ -39,7 +39,7 @@
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "forcedomain": "^1.0.0",
+    "forcedomain": "^1.0.1",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
